--- a/index.html
+++ b/index.html
@@ -202,13 +202,15 @@
         <tr>
           <td align="center" width="50px"></td>
           <td align="center" width="400px">
+            1
             <center>
               <img class="img-fluid d-block logo" height="50px" src="./resources/cuhk_logo.png">
             </center>
           </td>
           <td align="center" width="300px">
+            2
             <center>
-              <img class="img-fluid d-block logo" height="50px" src="./resources/hunan_logo.png">
+              <img class="img-fluid d-block logo" height="50px" src="./resources/autodesk_logo.jpeg">
             </center>
           </td>
           <td align="center" width="50px"></td>
