--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
         <tr>
           <td align="center" width="150px">
             <center>
-              <span style="font-size:22px"><a>Ka-Hei Hui<sup>1</sup></a></span>
+              <span style="font-size:22px"><a>Ka-Hei Hui<sup>*1</sup></a></span>
             </center>
           </td>
           <td align="center" width="150px">
             <center>
-              <span style="font-size:22px"><a>Aditya Sanghi<sup>2</sup></span>
+              <span style="font-size:22px"><a>Aditya Sanghi<sup>*2</sup></span>
             </center>
           </td>
           <td align="center" width="150px">
@@ -174,11 +174,16 @@
           </td>
           <td align="center" width="200px">
             <center>
-              <span style="font-size:22px">Kamal Rahimi Malekshan<sup>2</sup></a></span>
+              <span style="font-size:22px">(* joint 1st author)</span>
             </center>
           </td>
         </tr>
         <tr>
+          <td align="center" width="400px">
+            <center>
+              <span style="font-size:22px"><a>Kamal Rahimi Malekshan<sup>2</sup></a></span>
+            </center>
+          </td>
           <td align="center" width="400px">
             <center>
               <span style="font-size:22px"><a>Zhezheng Liu<sup>1</sup></a></span>
