--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           </td>
           <td align="center" width="400px">
             <center>
-              <span style="font-size:22px"><a>Zhezheng Liu<sup>1</sup></a></span>
+              <span style="font-size:22px"><a>Zhengzhe Liu<sup>1</sup></a></span>
             </center>
           </td>
           <td align="center" width="400px">
