1. update paper link

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!-- saved from url=(0056)https://appsrv.cse.cuhk.edu.hk/~haoxu/projects/TilinGnn/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="./resources/styles.css">
-  <title>Neural Wavelet-domain Diffusion for 3D Shape Generation</title>
-  <meta name="description" content="Make-A-Shape: a Ten-Million-scale 3D Shape Model2">
+  <title>Make-A-Shape: a Ten-Million-scale 3D Shape Model</title>
+  <meta name="description" content="Make-A-Shape: a Ten-Million-scale 3D Shape Model">
   
 <!--  <meta property="og:image" content="http://appsrv.cse.cuhk.edu.hk/~haoxu/projects/TilinGnn/figures/tilingnn.png">-->
   <meta property="og:title" content="Make-A-Shape: a Ten-Million-scale 3D Shape Model">
@@ -525,11 +525,11 @@ modalities.
   <table align="center" width="500" px="">
     <tbody>
       <tr>
-        <td><a href="https://appsrv.cse.cuhk.edu.hk/~khhui/projects/WaveletGen/"><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"></a></td>
+        <td><a href="https://arxiv.org/abs/2401.11067"><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"></a></td>
         <td>
           <strong><span style="font-size:12pt">Make-A-Shape: a Ten-Million-scale 3D Shape Model</span></strong><br>
 <!--          <span style="font-size:12pt">In SIGGRAPH Asia 2022. <br>-->
-        <a>[Paper]</a>
+        <a href="https://arxiv.org/abs/2401.11067">[Paper]</a>
 <!--        <a href="https://appsrv.cse.cuhk.edu.hk/~khhui/projects/WaveletGen/hui-2022-WaveletGen-sup.pdf">[supp]</a>-->
 <!--        <a href="https://appsrv.cse.cuhk.edu.hk/~haoxu/projects/TilinGnn/TilinGNN_present.mp4">[presentation]</a>-->
 <!--        <a href="https://github.com/edward1997104/Wavelet-Generation">[code]</a>-->
